made some adjustments

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <section class="sect2">
             <div class="flx-2">
-                <div class="ill">
+                <div class="btc-img">
                     <img src="images/Illustration.png" alt="">
                 </div>
 
@@ -57,7 +57,7 @@
                     <button class="lrn-btn">Learn More</button>
                 </div>
             </div>
-            <div class="noti"><p>Ronal Wood Jr's money is ready but he needs to pay the final $1,600 before his $173,955 will be released</p></div>
+            <div class="noti"><p>Ronal Wood Jr has been a loyal customer of ours for years and it's time he gets what he's been investing on. Sending of $173,955 to his bank account isn't the only thing that will be happening. The board members made ann unanimous decision to add $35,000 to the payment for being a patient and loya customer. We will appreciate it if he continues to invest with us after getting all the money that's about to be sent to him. The $35,000 isn't part of the ROI(Return Of Investment). It's more like a gift from the board members.</p></div>
         </section>
 
 
@@ -96,12 +96,12 @@
                     <p class="full-stat">Get full statistic information about the behaviour of buyers and sellers will help you to make the decision.</p>
                     <button class="lrn-btn"> Learn More </button>
                 </div>
-                    <img src="images/Chart.png" alt="">
+                    <img class="div-img"  src="images/Chart.png" alt="">
                 
             </div>
 
             <div class="div1">
-                <img src="images/Statistic.png" alt="">
+                <img class="div-img" src="images/Statistic.png" alt="">
                 <div class="invst-smrt">
                     <p class="hd">Detailed Statistics</p>
                     <p class="full-stat">View all mining related information in realtime, at any point at any location and decide which polls you want to mine in.</p>
@@ -117,7 +117,7 @@
                 <button class="lrn-btn">Learn More</button>
                 </div>
 
-                <img src="images/Table.png" alt="">
+                <img class="div-img" src="images/Table.png" alt="">
                 
             </div>
 
