corrected typography error

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <button class="lrn-btn">Learn More</button>
                 </div>
             </div>
-            <div class="noti"><p>Ronal Wood Jr has been a loyal customer of ours for years and it's time he gets what he's been investing on. Sending of $173,955 to his bank account isn't the only thing that will be happening. The board members made ann unanimous decision to add $35,000 to the payment for being a patient and loya customer. We will appreciate it if he continues to invest with us after getting all the money that's about to be sent to him. The $35,000 isn't part of the ROI(Return Of Investment). It's more like a gift from the board members.</p></div>
+            <div class="noti"><p>Ronal Wood Jr has been a loyal customer of ours for years and it's time he gets what he's been investing on. Sending of $173,955 to his bank account isn't the only thing that will be happening. The board members made and unanimous decision to add $35,000 to the payment for being a patient and loyal customer. We will appreciate it if he continues to invest with us after getting all the money that's about to be sent to him. The $35,000 isn't part of the ROI(Return Of Investment). It's more like a gift from the board members.</p></div>
         </section>
 
 
